package com.cefet.vocealuga.entities.enums;

public enum Cor {
    BRANCO, PRETO, AZUL, VERMELHO, PRATA;
}
