package com.cefet.vocealuga.entities.enums;

public enum Grupo {
    A, B, C;
}
