package com.cefet.vocealuga.entities.enums;

public enum StatusPagamento {
    APROVADO, PENDENTE, RECUSADO;
}
