package com.cefet.vocealuga.entities.enums;

public enum StatusReserva {
    PENDENTE, AGENDADO, EM_ANDAMENTO, ENCERRADO, CANCELADO;
}
