package com.cefet.vocealuga.entities.enums;

public enum StatusTransferencia {
    PENDENTE, APROVADO, CANCELADO, CONCLUIDO
}
