package com.cefet.vocealuga.entities.enums;

public enum StatusVeiculo {
    EM_USO, DISPONIVEL, RESERVADO, MANUTENCAO;
}
