package com.cefet.vocealuga.entities.enums;

public enum TipoReserva {
    IMEDIATA, ANTECIPADA
}
