@startuml "Diagrama de Classes - Você Aluga"

' === ENTIDADES PRINCIPAIS ===

abstract class Usuario {
  -Long id
  -String nome
  -String documento
  -LocalDate dataDeNascimento
  -String email
  -String password
  -String telefone
  +getId() : Long
  +setId(Long) : void
  +getNome() : String
  +setNome(String) : void
  +getEmail() : String
  +setEmail(String) : void
  +getPassword() : String
  +setPassword(String) : void
}

class Cliente extends Usuario {
  -int pontosFidelidade
  +getPontosFidelidade() : int
  +setPontosFidelidade(int) : void
}

class Funcionario extends Usuario {
  -String cargo
  -Filial filial
  +getCargo() : String
  +setCargo(String) : void
  +getFilial() : Filial
  +setFilial(Filial) : void
}

class Gerente extends Funcionario {
  +Gerente()
}

class Administrador extends Funcionario {
  +Administrador()
}

class Motorista {
  -Long id
  -String cnh
  -String nome
  -String cpf
  -LocalDate dataNascimento
  +getId() : Long
  +setId(Long) : void
  +getCnh() : String
  +setCnh(String) : void
  +getNome() : String
  +setNome(String) : void
}

class Veiculo {
  -Long id
  -String marca
  -String modelo
  -Grupo grupo
  -int ano
  -Cor cor
  -double valorDiaria
  -Long quilometragem
  -StatusVeiculo statusVeiculo
  -String placa
  -Estoque estoque
  -Filial filial
  +getId() : Long
  +setId(Long) : void
  +getMarca() : String
  +setMarca(String) : void
  +getModelo() : String
  +setModelo(String) : void
}

class Reserva {
  -Long id
  -Usuario usuario
  -Motorista motorista
  -TipoReserva categoria
  -StatusReserva status
  -LocalDate dataReserva
  -LocalDate dataVencimento
  -Filial localRetirada
  -Veiculo veiculo
  +getId() : Long
  +setId(Long) : void
  +getUsuario() : Usuario
  +setUsuario(Usuario) : void
  +getMotorista() : Motorista
  +setMotorista(Motorista) : void
}

class Filial {
  -Long id
  -String nome
  -String local
  -Estoque estoque
  +getId() : Long
  +setId(Long) : void
  +getNome() : String
  +setNome(String) : void
  +getLocal() : String
  +setLocal(String) : void
}

class Estoque {
  -Long id
  -String nome
  -Filial filial
  +getId() : Long
  +setId(Long) : void
  +getNome() : String
  +setNome(String) : void
  +getFilial() : Filial
  +setFilial(Filial) : void
}

class TransferenciaVeiculos {
  -Long id
  -Estoque estoqueOrigem
  -Estoque estoqueDestino
  -Instant data
  -Set<Veiculo> veiculos
  -StatusTransferencia status
  +getId() : Long
  +setId(Long) : void
  +getEstoqueOrigem() : Estoque
  +setEstoqueOrigem(Estoque) : void
  +getEstoqueDestino() : Estoque
  +setEstoqueDestino(Estoque) : void
}

class AgendarManutencao {
  -Long id
  -Veiculo veiculo
  -EstacaoDeServico estacaoDeServico
  -String motivoManutencao
  -Instant dataManutencao
  +getId() : Long
  +setId(Long) : void
  +getVeiculo() : Veiculo
  +setVeiculo(Veiculo) : void
}

class EstacaoDeServico {
  -Long id
  -String nome
  -String local
  +getId() : Long
  +setId(Long) : void
  +getNome() : String
  +setNome(String) : void
  +getLocal() : String
  +setLocal(String) : void
}

class Endereco {
  -Long id
  -String rua
  -String numero
  -String bairro
  -String cidade
  -String estado
  -String cep
  +getId() : Long
  +setId(Long) : void
  +getRua() : String
  +setRua(String) : void
}

' === ENUMS ===

enum Grupo {
  A
  B
  C
}

enum Cor {
  BRANCO
  PRETO
  AZUL
  VERMELHO
  PRATA
}

enum StatusVeiculo {
  EM_USO
  DISPONIVEL
  RESERVADO
  MANUTENCAO
}

enum TipoReserva {
  IMEDIATA
  ANTECIPADA
}

enum StatusReserva {
  PENDENTE
  AGENDADO
  EM_ANDAMENTO
  ENCERRADO
  CANCELADO
}

enum StatusTransferencia {
  PENDENTE
  APROVADO
  CANCELADO
  CONCLUIDO
}

enum StatusPagamento {
  APROVADO
  PENDENTE
  RECUSADO
}

' === DTOs ===

class PagamentoDTO {
  -String metodo
  -String cardNumber
  -String cardExpiry
  -String cardCVV
  -String cardName
  +getMetodo() : String
  +setMetodo(String) : void
}

' === RELACIONAMENTOS DE HERANÇA ===
Usuario <|-- Cliente
Usuario <|-- Funcionario
Funcionario <|-- Gerente
Funcionario <|-- Administrador

' === RELACIONAMENTOS JPA ===
Filial ||--|| Estoque : "1:1"
Estoque ||--o{ Veiculo : "1:N @ManyToOne"
Veiculo }o--|| Filial : "@ManyToOne"

Usuario ||--o{ Reserva : "1:N @ManyToOne"
Reserva }o--|| Filial : "@ManyToOne localRetirada"
Reserva }o--|| Veiculo : "@ManyToOne"
Reserva }o--o{ Motorista : "@ManyToOne"

TransferenciaVeiculos }o--|| Estoque : "@ManyToOne origem"
TransferenciaVeiculos }o--|| Estoque : "@ManyToOne destino"
TransferenciaVeiculos }o--o{ Veiculo : "@ManyToMany"

Veiculo ||--o{ AgendarManutencao : "1:N @ManyToOne"
AgendarManutencao }o--|| EstacaoDeServico : "@ManyToOne"

Funcionario }o--|| Filial : "@ManyToOne"

' === RELACIONAMENTOS COM ENUMS ===
Veiculo }o--|| Grupo
Veiculo }o--|| Cor
Veiculo }o--|| StatusVeiculo
Reserva }o--|| TipoReserva
Reserva }o--|| StatusReserva
TransferenciaVeiculos }o--|| StatusTransferencia

@enduml
